# openvino-rs-face-demo

./: CMakeLists.txt  README.md  main.cpp
cmake-modules/: InferenceEngineConfig.cmake  Logging.cmake  OpenCV.cmake  check_vino_version.cmake  dl_vino_model.cmake  ngraphConfig.cmake  ngraphTargets.cmake
